# gacha-game-pull-calculator

./: .gitignore  Makefile  README.md  build.sh  docker-compose.yml  package-lock.json
.github/: dependabot.yml
backend/: .dockerignore  .gitignore  .golangci.yml  Dockerfile  README.md  go.mod  go.sum  main.go  settings.json  vercel.json
docs/: FLOW.md  VISUAL.md
frontend/: .dockerignore  .eslintignore  .eslintrc.js  .prettierrc.json  README.md  eslint.config.js  eslint.config.mjs  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  (+6 more)
stats/: README.md  __init__.py  hsr_warp_stats.py  mypy.ini  pyproject.toml  requirements.txt  runner.py  stats_main.py
stats/core/: __init__.py  banner.py  banner_config.py  banner_stats.py  calculation_strategy.py  calculator.py  logging.py  standard_calculation_strategy.py
stats/core/calculation/: __init__.py  calculator.py  standard_calculation_strategy.py  strategy.py
stats/core/common/: __init__.py  errors.py  logging.py
stats/core/config/: __init__.py  banner.py  banner_config.py  validation.py
stats/core/stats/: __init__.py  analyzer.py  formatter.py
stats/games/genshin/: __init__.py
stats/games/star_rail/: __init__.py
stats/games/zenless/: __init__.py
stats/output/: __init__.py  csv_handler.py  row_formatter.py
stats/stats_utils/: banner_config.py  banner_stats.py  hsr_warp_stats.py  probability_calculator.py  visualization.py
stats/tests/: test_banner.py  test_calculation_strategy.py  test_calculations.py  test_calculator.py  test_csv_handler.py  test_runner.py
(+92 files in other folders)
