[project]
name = "stats"
version = "0.1.0"
description = "Statistics calculation module"
readme = "README.md"
requires-python = ">=3.13"
[tool.mypy]
python_version = "3.13"
disallow_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
dependencies = [
    "numpy>=2.2.5",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "ruff>=0.11.8",
]
